# tgbot

./: .gitignore  Dockerfile  LICENSE  pyproject.toml
service/: __main__.py  client.py  config.py  json_tgbot.py  serializers.py
service/fasttext/: dataframe.py  model.py  waterfalls_fasttext.csv
service/templates/: message.html
