[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = ""
authors = ["Anna Dvoskina <anna.dvoskina@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.19.0"
telegram = "^0.0.1"
Flask = "^2.0.2"
python-telegram-bot = "^13.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
